name:            pool
version:         0.1.2
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Thread-safe resource pools.
description:     Useful for stuff like database connection pools.
category:        Data, Database, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent

library
    build-depends:   base                     >= 4         && < 5
                   , transformers             >= 0.2.1     && < 0.3
                   , monad-control            >= 0.2       && < 0.4
    exposed-modules: Data.Pool
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/yesodweb/persistent.git
