name:            persistent-postgresql
version:         0.0.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Backend for the persistent library using postgresql.
description:     Based on the HDBC-postgresql package
category:        Database
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/persistent/

library
    build-depends:   base >= 4 && < 5,
                     template-haskell >= 2.4 && < 2.5,
                     HDBC >= 2.2.6 && < 2.3,
                     transformers >= 0.2.1 && < 0.3,
                     MonadCatchIO-transformers >= 0.2.2 && < 0.3,
                     HDBC-postgresql >= 2.2.3.1 && < 2.3,
                     persistent >= 0.0.0 && < 0.1
    exposed-modules: Database.Persist.Postgresql
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/persistent.git

