name:            persistent-sqlite
version:         0.4.0
license:         BSD3
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Backend for the persistent library using sqlite3.
description:     This package includes a thin sqlite3 wrapper based on the direct-sqlite package, as well as the entire C library, so there are no system dependencies.
category:        Database, Yesod
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/persistent/

flag systemlib
  description: Use the system-wide sqlite library
  default: False

library
    build-depends:   base                    >= 4         && < 5
                   , template-haskell
                   , bytestring              >= 0.9.1     && < 0.10
                   , transformers            >= 0.2.1     && < 0.3
                   , persistent              >= 0.4       && < 0.5
                   , monad-peel              >= 0.1       && < 0.2
                   , containers              >= 0.2       && < 0.5
                   , text                    >= 0.7       && < 0.12
    exposed-modules: Database.Sqlite
                     Database.Persist.Sqlite
    ghc-options:     -Wall
    if flag(systemlib)
        extra-libraries: sqlite3
    else
        c-sources:   cbits/sqlite3.c

source-repository head
  type:     git
  location: git://github.com/snoyberg/persistent.git
