name:            persistent-couchdb
version:         0.1.0
license:         BSD3
license-file:    LICENSE
author:          Pavel Dvořák <id@dqd.cz>
maintainer:      Greg Weber <greg@gregweber.info>
synopsis:        Backend for the persistent library using CouchDB.
description:     Based on the CouchDB package.
category:        Database, Yesod
stability:       Experimental
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://www.yesodweb.com/book/persistent
bug-reports:     https://github.com/yesodweb/persistent/issues

library
    build-depends:   base                  >= 4.6        && < 5
                   , enumerator
                   , pool
                   , json
                   , aeson
                   , attoparsec
                   , transformers-base
                   , MonadCatchIO-transformers
                   , transformers          >= 0.2.1    && < 0.3
                   , CouchDB               >= 1.2      && < 1.3
                   -- , couchdb-conduit       >= 0.10     && < 0.11
                   , persistent            >= 1.0      && < 1.1
                   , containers            >= 0.2      && < 0.5
                   , bytestring            >= 0.9      && < 0.10
                   , text                  >= 0.7      && < 0.12
                   , monad-control         >= 0.3      && < 0.4
                   , time                  >= 1.1
                   -- , data-object           >= 0.3      && < 0.4
                   -- , neither               >= 0.3      && < 0.4
                   , SHA                   >= 1.5
    exposed-modules: Database.Persist.CouchDB
    ghc-options:     -Wall
