name:            persistent-mysql
version:         0.2.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Backend for the persistent library using MySQL.
category:        Database
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/persistent/

library
    build-depends:   base >= 4 && < 5,
                     template-haskell >= 2.4 && < 2.5,
                     bytestring >= 0.9.1
                     transformers >= 0.2.1 && < 0.4,
                     MonadCatchIO-transformers >= 0.2.2 && < 0.3,
                     utf8-string >= 0.3.4 && < 0.4,
                     persistent >= 0.2.0 && < 0.3,
                     containers >= 0.2 && < 0.4
    exposed-modules: Database.Mysql
                     Database.Persist.Mysql
    ghc-options:     -Wall
    extra-libraries: mysqlclient

source-repository head
  type:     git
  location: git://github.com/snoyberg/persistent.git
