name:            persistent-redis
version:         0.1.0
license:         MIT
license-file:    LICENSE
author:          Michael Snoyman <michael@snoyman.com>
maintainer:      Michael Snoyman <michael@snoyman.com>
synopsis:        Backend for the persistent library using reids.
category:        Database
stability:       Stable
cabal-version:   >= 1.6
build-type:      Simple
homepage:        http://docs.yesodweb.com/persistent/

library
    build-depends:   base >= 4 && < 5,
                     bytestring >= 0.9.1,
                     transformers >= 0.2.1 && < 0.4,
                     MonadCatchIO-transformers >= 0.2.2 && < 0.3,
                     utf8-string >= 0.3.4 && < 0.4,
                     persistent >= 0.1.0 && < 0.2,
                     redis >= 0.7.1 && < 0.8
    exposed-modules: Database.Persist.Redis
    ghc-options:     -Wall

source-repository head
  type:     git
  location: git://github.com/snoyberg/persistent.git
